--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^3.2.0",
     "@astrojs/rss": "^4.0.5",
-    "astro": "^4.6.0"
+    "astro": "^4.6.0",
+    "preact": "^10.20.2"
   }
 }
